# archelab

./: README.md  __init__.py  pyproject.toml  test_run.py
analysis/: compute_metrics.py  inspect_demo_dataset.py  load_dataset.py  plot_scripts.py  plots_notebook_scaffold.py
archelab/analysis/: __init__.py  defended_vs_insecure.py  load_dataset.py
archelab/defense/: __init__.py  defense_policy.py
archelab/env_core/: environment.py
archelab/episodes/: episode_api.py  kiro_demo_flow.py  runner_minimal.py
archelab/logging_utils/: dataset_writer.py  episode_recorder.py
archelab/models/: episode_result.py
archelab/tests/: test_dataset_writer.py  test_defense_policy.py  test_end_to_end_datasets.py  test_episode_api.py  test_kiro_defended_orchestrator.py  test_kiro_orchestrator.py  test_load_dataset.py  test_run_batch_demo.py  test_run_kiro_defended_batch.py  test_run_kiro_insecure_batch.py
docs/: kiro_archelab_adapter.md  kiro_mas_scenario.md
episodes/: episode_api.py  runner_minimal.py
kiro_integrations/: __init__.py  archelab_client.py  kiro_defended_orchestrator.py  kiro_orchestrator.py
models/: episode_result.py
scripts/: demo_dataset.py  run_batch_demo.py  run_kiro_defended_batch.py  run_kiro_insecure_batch.py  smoke_batch_demo.py
