[project]
name = "archelab"
version = "0.1.0"
description = "Minimal MAS security experiment orchestrator for ArcheRisk"
authors = [
    { name="Lemontreeran", email="ran.xing@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["archelab/tests"]
pythonpath = ["."]
